tweaked the css, still have issues aligning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ background-position: center;
 .card-button {
     text-align: center;
 
-    max-height: 215px;
+    max-height: 213px;
 
 
 }
